--- a/environment.yml
+++ b/environment.yml
@@ -2,101 +2,94 @@ name: Pandas_Workshop
 channels:
   - defaults
 dependencies:
+  - ca-certificates=2021.5.25
+  - certifi=2021.5.30
+  - openssl=1.1.1k
   - pip=21.1.1
   - python=3.9.5
+  - setuptools=52.0.0
+  - sqlite=3.35.4
+  - tzdata=2020f
+  - vc=14.2
+  - vs2015_runtime=14.27.29016
+  - wheel=0.36.2
+  - wincertstore=0.2
   - pip:
     - argon2-cffi==20.1.0
     - async-generator==1.10
-    - atomicwrites==1.4.0
-    - attrs==20.2.0
+    - attrs==21.2.0
     - backcall==0.2.0
-    - bleach==3.2.1
-    - branca==0.4.1
-    - certifi==2020.6.20
-    - cffi==1.14.3
+    - bleach==3.3.0
+    - branca==0.4.2
+    - cffi==1.14.5
     - chardet==4.0.0
     - colorama==0.4.4
-    - coverage==5.3
     - cycler==0.10.0
-    - decorator==4.4.2
-    - defusedxml==0.6.0
+    - decorator==5.0.9
+    - defusedxml==0.7.1
     - entrypoints==0.3
-    - folium==0.11.0
+    - folium==0.12.1
     - geographiclib==1.50
-    - geopy==2.0.0
+    - geopy==2.1.0
     - idna==2.10
-    - importlib-metadata==2.0.0
-    - iniconfig==1.1.1
-    - ipykernel==5.3.4
-    - ipython==7.18.1
+    - ipykernel==5.5.5
+    - ipython==7.24.1
     - ipython-genutils==0.2.0
-    - ipywidgets==7.5.1
-    - jedi==0.17.2
-    - Jinja2==2.11.2
-    - joblib==0.16.0
+    - ipywidgets==7.6.3
+    - jedi==0.18.0
+    - jinja2==3.0.1
+    - joblib==1.0.1
     - jsonschema==3.2.0
     - jupyter==1.0.0
-    - jupyter-client==6.1.7
-    - jupyter-console==6.2.0
-    - jupyter-core==4.6.3
+    - jupyter-client==6.1.12
+    - jupyter-console==6.4.0
+    - jupyter-core==4.7.1
     - jupyterlab-pygments==0.1.2
-    - kiwisolver==1.2.0
+    - jupyterlab-widgets==1.0.0
+    - kiwisolver==1.3.1
     - lxml==4.6.3
-    - MarkupSafe==1.1.1
-    - matplotlib==3.3.3
+    - markupsafe==2.0.1
+    - matplotlib==3.4.2
+    - matplotlib-inline==0.1.2
     - mistune==0.8.4
-    - nbclient==0.5.1
+    - nbclient==0.5.3
     - nbconvert==6.0.7
-    - nbformat==5.0.8
-    - nest-asyncio==1.4.1
-    - notebook==6.1.4
-    - numpy==1.15.4
-    - openpyxl==3.0.9
-    - packaging==20.4
-    - pandas==1.1.5
-    - pandas-read-xml==0.3.0
+    - nbformat==5.1.3
+    - nest-asyncio==1.5.1
+    - notebook==6.4.0
+    - numpy==1.20.3
+    - packaging==20.9
+    - pandas==1.2.4
     - pandocfilters==1.4.3
-    - parso==0.7.1
+    - parso==0.8.2
     - pickleshare==0.7.5
-    - Pillow==8.0.1
-    - pluggy==0.13.1
-    - pprintpp==0.4.0
-    - prometheus-client==0.8.0
-    - prompt-toolkit==3.0.8
-    - py==1.10.0
+    - pillow==8.2.0
+    - prometheus-client==0.11.0
+    - prompt-toolkit==3.0.18
     - pycountry==20.7.3
-    - pycountry-convert==0.7.2
     - pycparser==2.20
-    - Pygments==2.7.2
+    - pygments==2.9.0
     - pyparsing==2.4.7
-    - pyreadstat==1.1.2
     - pyrsistent==0.17.3
-    - pytest==6.2.1
-    - pytest-cov==2.10.1
-    - pytest-mock==3.4.0
     - python-dateutil==2.8.1
-    - pytz==2020.1
-    - pywinpty==0.5.7
-    - pyzmq==19.0.2
-    - qtconsole==4.7.7
-    - QtPy==1.9.0
-    - repoze.lru==0.7
+    - pytz==2021.1
+    - pywin32==301
+    - pywinpty==1.1.2
+    - pyzmq==22.1.0
+    - qtconsole==5.1.0
+    - qtpy==1.9.0
     - requests==2.25.1
-    - scikit-learn==0.23.2
+    - scikit-learn==0.24.2
     - scipy==1.6.3
-    - seaborn==0.10.1
-    - Send2Trash==1.5.0
-    - six==1.15.0
-    - tables==3.6.1
-    - terminado==0.9.1
-    - testpath==0.4.4
+    - seaborn==0.11.1
+    - send2trash==1.5.0
+    - six==1.16.0
+    - terminado==0.10.1
+    - testpath==0.5.0
     - threadpoolctl==2.1.0
-    - toml==0.10.2
-    - tornado==6.1.0
+    - tornado==6.1
     - traitlets==5.0.5
-    - urllib3==1.26.3
+    - urllib3==1.26.5
     - wcwidth==0.2.5
     - webencodings==0.5.1
     - widgetsnbextension==3.5.1
-    - wincertstore==0.2
-    - zipp==3.3.2
